#0000 Review: Optimization of code